# SER

./: .gitignore  LICENSE  MANIFEST.in  frozenreqs.txt  main.py  motor1.json  motor_1.ini  motor_1.json  output.csv  output.txt  pyproject.toml  readme.md  readme_es.md  readme_user.md  requirements.txt  run.json  sequence.json
Documentation/: SER.interfaces.instrument.Instrument.dot  classes_SER.dot  packages_SER.dot
application/: app.py  motor_1.json  output.csv
components/: TwoDMapper.py
components/RandValue/: __init__.py  rand.ui  rand_value.py
components/VirtualPlatina/: __init__.py  platina_frontend.py  point_select.ui
core/: log.py  main.py  main_window.py  main_window.ui  runner.py
core/interfaces/: __init__.py  component.py  conf_ui.py  data_ui.py  module.py  run_ui.py  user_interface.py
core/model/: run_experiment.py
core/ui/: main_window.py
core/utils/: gen.py
preprod/: colormap_test.py  generator_test.py  lantz_log_test.py  lantz_test_front.ui  matplotlib_test.py  matplotlib_test.ui  module_b_test.py  module_test.py  parallel_test.ui  pixmap_test.py  pixmap_test.ui  signal_test.py
preprod_test/: lantz_log_test.py  lantz_test.py  lantz_test_main.ui  log_test.py  module_b_test.py  parallel_test.py
src/SER/: __init__.py  log.py  main.py  runner.py
src/SER/interfaces/: __init__.py  component.py  instrument.py  user_interface.py
src/SER/model/: __init__.py  data_repository.py  dispatcher.py  documentation.py  gen.py  run_experiment.py  runner.py  sequencer.py
src/SER/ui/: __init__.py  color_list.py  (+13 more)
tests/: generator_test.py
(+5 files in other folders)
