[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SER"
version = "0.0.1"
authors = [
  { name="Francisco Gauna", email="fgauna@fi.uba.ar" },
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--import-mode=importlib"]

[project.urls]
"Homepage" = "https://github.com/FranciscoGauna/SER"
"Bug Tracker" = "https://github.com/FranciscoGauna/SER"
