[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SER"
version = "0.0.1"
authors = [
  { name="Francisco Gauna", email="fgauna@fi.uba.ar" },
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]


[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--import-mode=importlib"]

[project.urls]
"Homepage" = "https://github.com/FranciscoGauna/SER"
"Bug Tracker" = "https://github.com/FranciscoGauna/SER"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
